# tokenizer-evidence

./: .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  pyproject.toml
docs/: baseline_artifact_audit.md  baseline_artifact_quarantine.md  baseline_chain_hash_fidelity_audit.md  baseline_chain_hash_protocol.md  baseline_fidelity_gate.md  baseline_gap_audit.md  baseline_paper_registry.md  baseline_perinucleus_llama_anchor_protocol.md  baseline_perinucleus_llama_anchor_result.md  baseline_perinucleus_official_overfit.md  baseline_perinucleus_official_protocol.md  baseline_perinucleus_official_qwen_final_protocol.md  baseline_perinucleus_official_smoke.md  baseline_perinucleus_protocol.md  baseline_perinucleus_qwen_candidate_freeze.md  baseline_perinucleus_qwen_candidate_utility.md  baseline_perinucleus_qwen_capacity_sweep.md  baseline_protocol.md  calibration_protocol.md  chimera_h200_submission.md  chimera_runbook.md  claim_support_matrix.md  codex_experiment_repo_map.md  codex_paper_repo_map.md  experiment_matrix.md  experiment_protocol.md  far_terminology_audit.md  far_utility_compute_protocol.md  full_far_payload_claim_protocol.md  g3a_v1_contract_audit.md  g3a_v1_failure_analysis.md  g3a_v2_artifact_audit.md  g3a_v2_failure_root_cause.md  g3a_v2_protocol.md  g3a_v3_protocol.md  r1_llama_failure_analysis.md  r1_replication_protocol.md  result_schema.md  scrub_persistence_protocol.md  t1_chimera_package.md  (+1 more)
exp-TOAL/: Specification.md
scripts/: __init__.py  aggregate_full_far_payload_claim_shards.py  attack.py  backfill_perinucleus_llama_anchor_utility.py  eval.py  (+80 more)
(+3831 files in other folders)
