[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenizer-alignment-ownership"
version = "0.1.0"
description = "Research-grade scaffold for tokenizer-constrained ownership verification experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
rs = [
  "reedsolo>=1.7",
]

[tool.setuptools]
packages = [
  "src",
  "src.core",
  "src.training",
  "src.baselines",
  "src.evaluation",
  "src.infrastructure",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
